# dahoop

./: README.md  ci_win.bat  ci_win.ps1  dahoop.cabal  doctest.sh  hadoop.cabal  stack-win.yaml  stack.yaml
example/: Main.hs
src/: Dahoop.hs
src/Dahoop/: Event.hs  Master.hs  Single.hs  Slave.hs  Utils.hs  ZMQ4.hs
src/Dahoop/Internal/: Messages.hs  WorkQueue.hs
src/Dahoop/ZMQ4/: Trans.hs
