name:                dahoop
version:             0.1.0.0
author:              Nick Partridge
maintainer:          nkpart@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: src
  ghc-options: -threaded -rtsopts -O2
  default-language:    Haskell2010
  exposed-modules:
    Dahoop.Master
    Dahoop.Slave
    Dahoop.Event
                  
    Dahoop.Utils
    Dahoop.ZMQ4
    Dahoop.ZMQ4.Trans
    
    Dahoop.Internal.Messages
    Dahoop.Internal.WorkQueue

  build-depends:
                    base
                , async
                , bytestring
                , cereal
                , containers
                , mtl
                , monad-control
                , exceptions >= 0.8.0.2
                , hostname
                , hslogger
                , lens
                , random
                , semigroups
                , stm
                , transformers
                , uuid
                , zeromq4-haskell

executable example
  main-is:             Main.hs
  hs-source-dirs: example
  build-depends:
                base
              , dahoop
              , bytestring
              , random
              , cereal
              , transformers
              , mtl
  default-language:    Haskell2010
  ghc-options: -threaded -rtsopts -O2
